# Python-Batch1

./: README.md
git-learning/: git-basics.md
python-learning/: Conditionalstatements.ipynb  Loops.ipynb  datatypes.ipynb  jupyter-notebook-learning.ipynb  learning.py  operators.ipynb  python-learning.md  syntax.ipynb  variables.ipynb
python-learning/Advance Python Concepts/: Decorators.ipynb  Generators.ipynb  Iterators.ipynb  large_file.txt
python-learning/Class And Objects/: 1-oops.ipynb  2-inheritance.ipynb  3-Polymorphism.ipynb  4-Encapsulation.ipynb  5-Abstraction.ipynb  6-magicmethods.ipynb  7-OperatorOverloading.ipynb
python-learning/Data Analysis With Python/: 1-numpy.ipynb  2-pandas.ipynb  3-1 Pandas_Data_Manipulation_Tutorial.ipynb  3-2 datamanipulation with sales data.ipynb  4-readdata.ipynb  5-matplotlib.ipynb  6-seaborn.ipynb  final_employee_data.csv
python-learning/Design Patterns/: Design_Patterns_Python.ipynb  Design_Patterns_Python2.ipynb  support_ticketing_system.ipynb
python-learning/Exception Handling/: exception.ipynb
python-learning/Functions/: 1-functions.ipynb  2-examplesfunctions.ipynb  3-Lambda.ipynb  4-Mapsfunction.ipynb  5-filterfunction.ipynb  sample.txt
python-learning/Modules/: 5.1-import.ipynb  5.2-Standardlibrary.ipynb  example.csv  source.txt
python-learning/backend-learning/fastapi_postgres_backend/: .gitignore  Makefile  README.md  build.sh  debug.py  env-sample  main.py  migrate.py  pyproject.toml
python-learning/backend-learning/fastapi_postgres_backend/alembic/: env.py
python-learning/backend-learning/fastapi_postgres_backend/alembic/versions/: debf3d6ae298_initial_migration.py
python-learning/backend-learning/fastapi_postgres_backend/app/: main.py
python-learning/backend-learning/fastapi_postgres_backend/app/api/v1/: api.py
python-learning/backend-learning/fastapi_postgres_backend/app/api/v1/endpoints/: http_methods.py  http_methods_read_me.md  users.py
python-learning/backend-learning/fastapi_postgres_backend/app/core/: config.py
python-learning/backend-learning/fastapi_postgres_backend/app/crud/: user.py
python-learning/backend-learning/fastapi_postgres_backend/app/db/: base.py  init_db.py  session.py
python-learning/backend-learning/fastapi_postgres_backend/app/middlewares/: middleware-docs.md
python-learning/backend-learning/fastapi_postgres_backend/app/models/: db_base.py  user.py
python-learning/backend-learning/fastapi_postgres_backend/app/schemas/: user.py
python-learning/backend-learning/fastapi_postgres_backend/scripts/: setup-dev.sh
python-learning/backend-learning/fastapi_postgres_backend/test/: README.md  conftest.py  pytest.ini  run_all_tests.py  run_tests.py  test_users.py
python-learning/prompt_engineering/: 01_basic_prompts.md  02_intermediate_prompts.md  03_advanced_prompts.md  README.md  (+1 more)
(+59 files in other folders)
